Filterable Search: center text correctly on mobile back to top button

--- a/gato-area-filterable-search/src/main/resources/gato-area-filterable-search/css/filterablesearch.scss
+++ b/gato-area-filterable-search/src/main/resources/gato-area-filterable-search/css/filterablesearch.scss
@@ -631,6 +631,8 @@ $filterable-search-header-font: serif !default;
       @media (max-width:$sm-breakpoint) {
         display: flex;
         flex-direction: column;
+        justify-content: center;
+        align-items: center;
         font-size: 1rem;
         width: 60px;
         height: 60px;
